# wordiy-cli

./: .coderabbit.yaml  .gitignore  .wordiyrc.example.toml  Cargo.toml
.github/ISSUE_TEMPLATE/: bug_report.md  task_feature.md
src/: cli.rs  client.rs  config.rs  context.rs  error.rs  extract.rs  main.rs  multipart.rs
src/commands/: init.rs  mod.rs  pull.rs  push.rs
